--- a/secureannex-detect-unlisted-extension.yml
+++ b/secureannex-detect-unlisted-extension.yml
@@ -8,4 +8,4 @@ rules:
     path: event/results/extensions/?/visibility
     value: unlisted
 - action: report
-  name: Secure Annex - Chrome extension remote access category detected
+  name: Secure Annex - unlisted browser extension detected
