--- a/secureannex-detect-password-manager.yml
+++ b/secureannex-detect-password-manager.yml
@@ -8,7 +8,7 @@ detect:
     - op: and
       rules:
         - op: is
-          path: event/results/extensions/?/category
+          path: event/results/extensions/?/categories/?/
           value: Password Manager
         - op: is
           path: event/results/extensions/?/extension_id
@@ -18,6 +18,6 @@ respond:
 - action: report
   metadata:
     author: John Tuckner
-    description: Detects a password manager other than an approved one
+    description: Detects unapproved password managers. 1Password is approved in this example.
     level: low
-  name: Detect unauthorized password manager
+  name: Detect unauthorized password managers
