--- a/secureannex-detect-password-manager.yml
+++ b/secureannex-detect-password-manager.yml
@@ -7,7 +7,7 @@ detect:
       value: ext-secureannex
     - op: and
       rules:
-        - op: is
+        - op: contains
           path: event/results/extensions/?/categories/?/
           value: Password Manager
         - op: is
